# order-management-api

./: .gitignore  pyproject.toml
env/: pyvenv.cfg
order-management-api/: data_base.py  main.py
order-management-api/core_business/use_cases/: create_customer_use_case.py  get_customer_info_use_Case.py
order-management-api/core_business/use_cases/entities/: customer_persone.py  items.py  order.py  stock.py
order-management-api/database/: customerDB.py
order-management-api/entities/: customer_abs.py  customer_company.py  customer_persone.py  items.py  order.py  stock.py
order-management-api/interfaces/: repositores.py  services.py
order-management-api/tests/: test_CreateCustomerUI.py  test_CreateCustomerUseCase.py  test_customer_service.py  test_db.py  test_get_customer_use_case.py  test_get_info.py
order-management-api/use_cases/: create_customer_use_case.py  get_customer_info_use_Case.py  place_order.py
