[project]
name = "order-management-api"
version = "0.1.0"
description = "Order-managemnt-api is mock that manage inventory and orders also payment processing ."
authors = [
    {name = "Elbikam",email = "d.elbikam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
